# PurpleHack

./: .dockerignore  .gitignore  Dockerfile  README.md  backrground_remover.py  dataset.json  docker-compose.yml  main.py  model.pt  requirements.txt  run_model.py  train_model.py
src/: __init__.py  optimizer.py
tasks/: Sber.rar  solution.py
tasks/Sber/ml_solution/: pyproject.toml  requirements.txt  run_training.py
tasks/Sber/ml_solution/configs/: model_config.yaml
tasks/Sber/ml_solution/src/: __init__.py  train.py
tasks/Sber/ml_solution/src/data_generation/: __init__.py  synthetic_data.py
tasks/Sber/ml_solution/src/models/: __init__.py  base_model.py  scheduler_model.py  types.py
tasks/Sber/ml_solution/src/preprocessing/: data_processor.py
tasks/Sber/ml_solution/src/training/: trainer.py
temp/: 0286d49c-6407-4bc9-8dea-5d3682e2f765_input.json  0286d49c-6407-4bc9-8dea-5d3682e2f765_output.json  091f5905-d47d-4363-931f-68a2990c2c28_output.json  15dbc31a-62b9-45bb-bf57-469d5a55a9ea_output.json  226881c8-3952-4cff-abdd-81ea897ba39d_output.json  35903d7d-c481-4b13-8c29-e60962bd16d0_output.json  3676fd80-a80c-4f8a-a02d-0212cabd570c_output.json  42c5c0f2-8615-4ea7-8140-4a75cef457bf_output.json  55475d67-e8e0-406e-83a6-6ce6762a0db3_input.json  55475d67-e8e0-406e-83a6-6ce6762a0db3_output.json  6452b840-05be-434b-8710-de09d077c209_output.json  809dcfc5-f7ba-49ed-b7b3-54f8f8b6aa89_input.json  82178f96-9d5f-4510-b40b-da6a487a9eb1_output.json  8fa14b9b-6fd6-4b9c-b360-5719af9f655e_output.json  902bb357-0d12-4e1d-afc9-d47652680994_output.json  (+7 more)
web_app/: __init__.py  (+2 more)
(+228 files in other folders)
