[tool.poetry]
name = "ml_solution"
version = "0.1.0"
description = "ML solution for project schedule optimization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
transformers = "^4.30.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
networkx = "^3.1"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
optuna = "^3.2.0"
mlflow = "^2.7.0"
pytest = "^7.4.0"
ruff = "^0.1.0"
jupyter = "^1.0.0"
hydra-core = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C", "D"]
ignore = ["D100", "D104"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D103"]
"*/__init__.py" = ["D104"] 